docs: Update README.md for clarity and additional features; remove legacy CLI comments and unused files